--- a/src/_include/head.jade
+++ b/src/_include/head.jade
@@ -1,3 +1,4 @@
 meta(charset="UTF-8")
-script(src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js")
+script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js")
+script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-sanitize.min.js")
 link(rel='stylesheet', href='/style.css')
